; ModuleID = '/home/carl/AnghaBench/vlc/modules/access/http/extr_h2frame_test.c_resize.c'
source_filename = "/home/carl/AnghaBench/vlc/modules/access/http/extr_h2frame_test.c_resize.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.vlc_h2_frame = type { i64* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (%struct.vlc_h2_frame* (%struct.vlc_h2_frame*, i64)* @resize to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal %struct.vlc_h2_frame* @resize(%struct.vlc_h2_frame* %0, i64 %1) #0 {
  %3 = alloca %struct.vlc_h2_frame*, align 8
  %4 = alloca i64, align 8
  store %struct.vlc_h2_frame* %0, %struct.vlc_h2_frame** %3, align 8
  store i64 %1, i64* %4, align 8
  %5 = load i64, i64* %4, align 8
  %6 = lshr i64 %5, 16
  %7 = load %struct.vlc_h2_frame*, %struct.vlc_h2_frame** %3, align 8
  %8 = getelementptr inbounds %struct.vlc_h2_frame, %struct.vlc_h2_frame* %7, i32 0, i32 0
  %9 = load i64*, i64** %8, align 8
  %10 = getelementptr inbounds i64, i64* %9, i64 0
  store i64 %6, i64* %10, align 8
  %11 = load i64, i64* %4, align 8
  %12 = lshr i64 %11, 8
  %13 = load %struct.vlc_h2_frame*, %struct.vlc_h2_frame** %3, align 8
  %14 = getelementptr inbounds %struct.vlc_h2_frame, %struct.vlc_h2_frame* %13, i32 0, i32 0
  %15 = load i64*, i64** %14, align 8
  %16 = getelementptr inbounds i64, i64* %15, i64 1
  store i64 %12, i64* %16, align 8
  %17 = load i64, i64* %4, align 8
  %18 = load %struct.vlc_h2_frame*, %struct.vlc_h2_frame** %3, align 8
  %19 = getelementptr inbounds %struct.vlc_h2_frame, %struct.vlc_h2_frame* %18, i32 0, i32 0
  %20 = load i64*, i64** %19, align 8
  %21 = getelementptr inbounds i64, i64* %20, i64 2
  store i64 %17, i64* %21, align 8
  %22 = load %struct.vlc_h2_frame*, %struct.vlc_h2_frame** %3, align 8
  ret %struct.vlc_h2_frame* %22
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
